discussion/kv_engine/181191/181191_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54072: Add test configuration builder

This config builder will allow us to reduce config string duplication in
parameterized tests.

I will replace the engine config literals with instances of Config in a
future patch.

Change-Id: I4c9669b8ff7f53263ab46463e73041bc23e6aeaa

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-10-13 11:49:11.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-13 12:53:13.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21141/ : FAILURE

clang-tidy found the following problems:

<pre>
error: too many errors emitted, stopping now [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:17:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TEST_F(ConfigTest, ToStringsWorks) {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:17:20: error: unknown type name "ToStringsWorks" [clang-diagnostic-error]
TEST_F(ConfigTest, ToStringsWorks) {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:20:5: error: use of undeclared identifier "ASSERT_EQ" [clang-diagnostic-error]
    ASSERT_EQ(1, strings.size());
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:21:5: error: use of undeclared identifier "ASSERT_EQ" [clang-diagnostic-error]
    ASSERT_EQ("bucket_type=ephemeral", strings[0]);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:27:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TEST_F(ConfigTest, ToStringsIsSortedByKey) {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:27:20: error: unknown type name "ToStringsIsSortedByKey" [clang-diagnostic-error]
TEST_F(ConfigTest, ToStringsIsSortedByKey) {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:31:5: error: use of undeclared identifier "ASSERT_EQ" [clang-diagnostic-error]
    ASSERT_EQ(1, strings.size());
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:32:5: error: use of undeclared identifier "ASSERT_EQ" [clang-diagnostic-error]
    ASSERT_EQ("bucket_type=ephemeral:ephemeral_full_policy=fail_new_data",
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:40:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TEST_F(ConfigTest, MultipleValuesAreSorted) {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:40:20: error: unknown type name "MultipleValuesAreSorted" [clang-diagnostic-error]
TEST_F(ConfigTest, MultipleValuesAreSorted) {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:44:5: error: use of undeclared identifier "ASSERT_EQ" [clang-diagnostic-error]
    ASSERT_EQ(2, strings.size());
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:45:5: error: use of undeclared identifier "ASSERT_EQ" [clang-diagnostic-error]
    ASSERT_EQ("ephemeral_full_policy=auto_new_data", strings[0]);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:46:5: error: use of undeclared identifier "ASSERT_EQ" [clang-diagnostic-error]
    ASSERT_EQ("ephemeral_full_policy=fail_new_data", strings[1]);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:53:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TEST_F(ConfigTest, ProductOperatorWorks) {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:53:20: error: unknown type name "ProductOperatorWorks" [clang-diagnostic-error]
TEST_F(ConfigTest, ProductOperatorWorks) {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:58:5: error: use of undeclared identifier "ASSERT_EQ" [clang-diagnostic-error]
    ASSERT_EQ(2, strings.size());
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:59:5: error: use of undeclared identifier "ASSERT_EQ" [clang-diagnostic-error]
    ASSERT_EQ("bucket_type=ephemeral:ephemeral_full_policy=auto_new_data",
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.h:14:29: error: no member named "testing" in the global namespace [clang-diagnostic-error]
class ConfigTest : public ::testing::Test {};
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.h:14:38: error: expected class name [clang-diagnostic-error]
class ConfigTest : public ::testing::Test {};
                                     ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21141/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/config_test.cc:17:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21141/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10872/ : FAILURE

Compile error at [2022-10-13T12:29:10.782Z] ../kv_engine/engines/ep/tests/module_tests/config_test.h:14:29:
error: no member named "testing" in the global namespace
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10872/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22571/ : FAILURE

Failure of GoogleTest "TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonYes_SnappyYes
[2022-10-13T12:08:57.448Z] unknown file: Failure
[2022-10-13T12:08:57.448Z] C++ exception with description "Failed to store TransportProtocols_XattrTest_mb25928_SystemCantExceedSystemLimit_Mcbp_XattrYes_JsonYes_SnappyYes: Temporary failure (134)" thrown in SetUp().
[2022-10-13T12:08:57.448Z] [  FAILED  ] TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonYes_SnappyYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (2 ms)
TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonYes_SnappyYes
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22571/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20389/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50329/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42231/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10969/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23161/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23555/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31572/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24393/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
